--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -47,7 +47,8 @@ steps:
         sudo apt-get install nginx -y
         tar -xvf /home/azureuser/XYZ.tar.gz -C /home/azureuser
         sudo rm /home/azureuser/XYZ.tar.gz
-        cd /home/azureuser/frontend/
+        cd frontend
+        pwd
         echo "In frontend folder"
         npm install
         npm run build
