--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -47,18 +47,18 @@ steps:
         sudo apt-get install nginx -y
         tar -xvf /home/azureuser/XYZ.tar.gz -C /home/azureuser
         sudo rm /home/azureuser/XYZ.tar.gz
-        echo '$(Build.SourcesDirectory)'
-        echo '$(Build.ArtifactStagingDirectory)'
-        echo '$(System.DefaultWorkingDirectory)'
-        echo '$(RemotePublicFolder)'
-        cd ./frontend
+        # echo '$(Build.SourcesDirectory)'
+        # echo '$(Build.ArtifactStagingDirectory)'
+        # echo '$(System.DefaultWorkingDirectory)'
+        # echo '$(RemotePublicFolder)'
+        cd $(FRONTENDFOLDER)
         pwd
         echo "In frontend folder"
         npm install
         npm run build
         sudo cp -r /home/azureuser/frontend/dist /var/www/html/
         cd ~
-        cd /home/azureuser/backend
+        cd $(BACKENDFOLDER)
         python3 -m venv virtual-env
         virtual-env/Scripts/activate
         pip3 install -r /home/azureuser/backend/requirements.txt
