--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -51,17 +51,18 @@ steps:
         # echo '$(Build.ArtifactStagingDirectory)'
         # echo '$(System.DefaultWorkingDirectory)'
         # echo '$(RemotePublicFolder)'
-        (cd $(FRONTENDFOLDER) && npm install)
-        (cd $(FRONTENDFOLDER) && npm run build)
+        (cd $(FRONTENDFOLDER) && npm install && npm run build && cp -r dist /var/www/html/ && exit)
+        sudo systemctl restart nginx
+        # (cd $(FRONTENDFOLDER) && npm run build && exit)
         # echo "In frontend folder"
         # npm install
         # npm run build
-        sudo cp -r /home/azureuser/frontend/dist /var/www/html/
-        (cd $(BACKENDFOLDER) && python3 -m venv virtual-env)
-        (cd $(BACKENDFOLDER)/virtual-env/Scripts && activate)
-        (cd $(BACKENDFOLDER) && pip3 install -r requirements.txt)
-        (cd $(BACKENDFOLDER) && flask run --debug)
-        sudo systemctl restart nginx
+        # sudo cp -r /home/azureuser/frontend/dist /var/www/html/
+        (cd $(BACKENDFOLDER) && python3 -m venv virtual-env && exit)
+        (cd $(BACKENDFOLDER)/virtual-env/Scripts && activate && pip3 install -r requirements.txt && flask run --debug)
+        # (cd $(BACKENDFOLDER) && pip3 install -r requirements.txt)
+        # (cd $(BACKENDFOLDER) && flask run --debug)
+        
 
 #   - task: NodeTool@0
 #     inputs:
