Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -51,6 +51,7 @@ steps:
         # echo '$(Build.ArtifactStagingDirectory)'
         # echo '$(System.DefaultWorkingDirectory)'
         # echo '$(RemotePublicFolder)'
+        sudo chmod +rwx /var/www/html/
         (cd $(FRONTENDFOLDER) && npm install && npm run build && cp -r build /var/www/html/ && exit)
         sudo systemctl restart nginx
         # (cd $(FRONTENDFOLDER) && npm run build && exit)
