Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -55,17 +55,17 @@ stages:
                     artifactName: 'flask-app'
                     targetPath: '$(Pipeline.Workspace)/flask-app'
 
-                # - task: CopyFilesOverSSH@0
-                #   inputs:
-                #     sshEndpoint: 'VM-connection'
-                #     sourceFolder: '$(Pipeline.Workspace)/frontend'
-                #     contents: '**'
-                #     targetFolder: '/var/www/react-app'
+                - task: CopyFilesOverSSH@0
+                  inputs:
+                    sshEndpoint: 'VM-connection'
+                    sourceFolder: '$(Pipeline.Workspace)/react-build'
+                    contents: '**'
+                    targetFolder: '/var/www/react-app'
                 
                 - task: CopyFilesOverSSH@0
                   inputs:
                     sshEndpoint: 'VM-connection'
-                    sourceFolder: '$(Pipeline.Workspace)/backend'
+                    sourceFolder: '$(Pipeline.Workspace)/flask-app'
                     contents: '**'
                     targetFolder: '/var/www/flask-app'
 
