Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -112,8 +112,8 @@ stages:
                               try_files \$uri /index.html;
                           }
 
-                          location /api {
-                              proxy_pass http://localhost:5000;
+                          location /api/ {
+                              proxy_pass http://localhost:5000/;
                               proxy_set_header Host \$host;
                               proxy_set_header X-Real-IP \$remote_addr;
                           }
