--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -105,10 +105,10 @@ stages:
                       
                       # Configure Nginx
                       sudo ln -sf /etc/nginx/sites-available/myapp /etc/nginx/sites-enabled/
-                      # sudo tee /etc/nginx/sites-available/myapp <<EOF
+                      sudo tee /etc/nginx/sites-available/myapp <<EOF
                       server {
                           listen 80;
-                          server_name example.com;
+                          listen [::]:80;
 
                           location / {
                               root /var/www/react-app;
@@ -126,4 +126,4 @@ stages:
                       sudo ln -s /etc/nginx/sites-available/myapp /etc/nginx/sites-enabled/
                       sudo nginx -t
                       sudo systemctl restart nginx
-                      (cd $(BACKENDFOLDER) && flask run --debug)
+                      (cd /var/www/flask-app && flask run --debug &)
