--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -65,6 +65,8 @@ stages:
                       sudo rm -r '/var/www/flask-app'
                       mkdir -p '/var/www/react-app'
                       mkdir -p '/var/www/flask-app'
+                      mkdir -p '/uploads'
+                      sudo chmod -R 777 /uploads
                       
                 - task: CopyFilesOverSSH@0
                   inputs:
