--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -109,11 +109,18 @@ stages:
                       # Configure Nginx
                       #sudo ln -sf /etc/nginx/sites-available/myapp /etc/nginx/sites-enabled/
                       # sudo systemctl stop nginx
+                      sudo tee /etc/nginx/conf.d/timeout.conf <<EOF
+                      proxy_connect_timeout 600;
+                      proxy_send_timeout 600;
+                      proxy_read_timeout 600;
+                      send_timeout 600;
+                      EOF
                       sudo rm /etc/nginx/conf.d/neptune-plastics.conf
                       sudo tee /etc/nginx/conf.d/neptune-plastics.conf <<EOF
                       server {
                           listen 80;
-
+                          access_log  /var/log/nginx/access.log;
+                          error_log  /var/log/nginx/error.log;
                           location / {
                               root /var/www/react-app-latest;
                               try_files \$uri /index.html;
