Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -137,4 +137,4 @@ stages:
                       #sudo ln -s /etc/nginx/sites-available/myapp /etc/nginx/sites-enabled/
                       sudo nginx -t
                       sudo systemctl restart nginx
-                      (cd /var/www/flask-app-latest && flask run --cert=cert.pem --key=key.pem &)
+                      (cd /var/www/flask-app-latest && flask run --cert=/home/azureuser/cert.pem --key=/home/azureuser/key.pem &)
