--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -118,24 +118,18 @@ stages:
                       sudo rm /etc/nginx/conf.d/neptune-plastics.conf
                       sudo tee /etc/nginx/conf.d/neptune-plastics.conf <<EOF
                       server {
-                          listen 443 ssl;
-                          server_name 172.210.63.95;
-
-                          ssl_certificate /home/azureuser/cert.pem;
-                          ssl_certificate_key /home/azureuser/key.pem;
-
-                          #listen 80;
+                          listen 80;
                           access_log  /var/log/nginx/access.log;
                           error_log  /var/log/nginx/error.log;
                           location / {
                               root /var/www/react-app-latest;
-                              try_files $uri /index.html;
+                              try_files \$uri /index.html;
                           }
 
                           location /api/ {
-                              proxy_pass https://172.210.63.95:5000/;
-                              proxy_set_header Host $host;
-                              proxy_set_header X-Real-IP $remote_addr;
+                              proxy_pass http://localhost:5000/;
+                              proxy_set_header Host \$host;
+                              proxy_set_header X-Real-IP \$remote_addr;
                           }
                       } 
                       EOF
@@ -143,4 +137,4 @@ stages:
                       #sudo ln -s /etc/nginx/sites-available/myapp /etc/nginx/sites-enabled/
                       sudo nginx -t
                       sudo systemctl restart nginx
-                      (cd /var/www/flask-app-latest && flask run --cert=/home/azureuser/cert.pem --key=/home/azureuser/key.pem &)
+                      (cd /var/www/flask-app-latest && flask run --debug &)
